added comments for code and README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+
+# Generally looks like this => spring.datasource.url=jdbc:mysql://localhost:3306/employee-management-system
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
