--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.xerial</groupId>
+    <artifactId>sqlite-jdbc</artifactId>
+    <!--<version>3.41.2.1</version>-->
+</dependency>
+ <dependency>
+        <groupId>com.github.gwenn</groupId>
+        <artifactId>sqlite-dialect</artifactId>
+        <version>0.1.2</version>
+    </dependency>
+    <dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>1.0.2</version>
+</dependency>
 	</dependencies>
 
 	<build>
