--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-# Generally looks like this => spring.datasource.url=jdbc:mysql://localhost:3306/employee-management-system
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:mariadb://localhost:3306/test_db_java?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:sqlite:database.db
+spring.datasource.username=testuser
+spring.datasource.password=password
+
+# Hibernate
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.sqlite.hibernate.dialect.SQLiteDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+	
+spring.datasource.driver-class-name = org.sqlite.JDBC
